# cecil

./: .gitignore  CHANGELOG.md  ENGINEERING_REMAINING_REMEDIATION_TASKS.md  ENGINEERING_SDK_GAP_CLOSURE_TASKS.md  ENGINEERING_SDK_IMPLEMENTATION_TASKS.md  ENGINEERING_SDK_REMAINING_TASKS.md  LICENSE  Makefile  README.md  RELEASE_NOTES_INPUT.txt  design-doc.md  prd.md  pyproject.toml
.github/workflows/: ci.yml  provider-compat.yml  release-testpypi.yml  release.yml
agents/skills/architect_repo_reviewer/: SKILL.md
agents/skills/e2e_tester_llm_sdk_qa/: SKILL.md
agents/skills/open_source_python_sdk_expert/: SKILL.md
agents/skills/planner_principal_architect_pm/: SKILL.md
agents/skills/senior_llm_sdk_engineer_strict_sdlc/: SKILL.md
docs/: cache-breaker-tradeoffs.md  compatibility-matrix.md  feature-plan.md  gap-closure-feature-plan.md  live-tests.md  non-goals.md  performance-budget.md  pricing-policy.md  privacy-contract.md  quickstart.md  recommendations.md  release-checklist.md  release-qa-summary.md  remediation-feature-plan.md  savings-model.md  schema-examples.md  security-checklist.md  support-policy.md  telemetry-opt-in.md  troubleshooting.md
examples/: quickstart_local.py  recommendations_example.py  telemetry_opt_in.py
scripts/: check_build_warnings.py  check_schema_compat.py  generate_changelog.py  generate_release_qa_stub.py  smoke_check_wheel.py
sdk/python/cecil/: __init__.py  analytics.py  config.py  cost.py  event_model.py  logging.py  patcher.py  savings.py  schema.py  telemetry.py
sdk/python/cecil/adapters/: __init__.py  anthropic_adapter.py  openai_adapter.py
sdk/python/cecil/data/: __init__.py  pricing_v1.json  telemetry_event_v1.json
sdk/python/llm_observer/: __init__.py  cache_analysis.py  canonicalize.py  config.py  cost.py  event_model.py  logging.py  patcher.py  privacy.py  recommendations.py  schema.py  telemetry.py
sdk/python/llm_observer/adapters/: anthropic_adapter.py  common.py  openai_adapter.py
sdk/python/llm_observer/data/: telemetry_event_v1.json
shared/pricing/: pricing_v1.json
shared/schema/baseline/: telemetry_event_v1_baseline.json
tests/: conftest.py
tests/compat/: test_provider_contracts.py
tests/golden/: test_similarity_golden.py
tests/integration/: test_anthropic_adapter.py  test_contract_compat.py  test_fail_open.py  test_openai_adapter.py  test_openai_live_api.py  test_telemetry_transport.py  test_transport_failures.py  test_usage_analytics_with_patch.py
tests/perf/: test_overhead.py
tests/unit/: test_cache_analysis.py  test_canonicalize_and_hashing.py  test_changelog_script.py  test_config.py  test_cost.py  test_data_artifacts_sync.py  test_event_history.py  test_patcher_state.py  test_privacy_event.py  test_privacy_modes.py  test_prompt_extraction.py  test_provider_compat_workflow.py  test_recommendations.py  test_savings_and_pricing.py  test_schema.py  test_telemetry_queue.py  test_telemetry_shutdown.py
