[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-observer"
version = "0.1.0"
description = "Lightweight LLM observability SDK with privacy-first defaults"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "LLM Observer Team" }]
keywords = ["llm", "observability", "telemetry", "openai", "anthropic"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: OS Independent",
]
dependencies = [
  "jsonschema>=4.22.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "mypy>=1.11.2",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.4",
]

[project.urls]
Homepage = "https://github.com/alexmilman/cecil"
Repository = "https://github.com/alexmilman/cecil"
Issues = "https://github.com/alexmilman/cecil/issues"
Documentation = "https://github.com/alexmilman/cecil/tree/main/docs"

[tool.setuptools]
package-dir = {"" = "sdk/python"}

[tool.setuptools.packages.find]
where = ["sdk/python"]

[tool.setuptools.package-data]
llm_observer = ["data/*.json"]

[tool.pytest.ini_options]
addopts = "-q --cov=llm_observer --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.9"
strict = true
packages = ["llm_observer"]
mypy_path = "sdk/python"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["jsonschema"]
ignore_missing_imports = true
