[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cecil-sdk"
version = "0.2.0"
description = "Lightweight LLM observability SDK with privacy-first defaults"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Cecil SDK Team" }]
keywords = ["llm", "observability", "telemetry", "openai", "anthropic"]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: OS Independent",
]
dependencies = [
  "jsonschema>=4.22.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "mypy>=1.11.2",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.4",
  "twine>=6.2.0",
]

live_openai = [
  "openai==1.40.0",
  "httpx==0.27.2",
]

[project.urls]
Homepage = "https://github.com/cecil-sdk/cecil-python"
Repository = "https://github.com/cecil-sdk/cecil-python"
Issues = "https://github.com/cecil-sdk/cecil-python/issues"
Documentation = "https://github.com/cecil-sdk/cecil-python/tree/main/docs"

[tool.setuptools]
package-dir = {"" = "sdk/python"}

[tool.setuptools.packages.find]
where = ["sdk/python"]

[tool.setuptools.package-data]
cecil = ["data/*.json"]

[tool.pytest.ini_options]
addopts = "-q --cov=cecil --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.9"
strict = true
packages = ["cecil"]
mypy_path = "sdk/python"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["jsonschema"]
ignore_missing_imports = true
